--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
   <!--
   <script>
     var YOUR_CLIENT_ID = '/';
-    var YOUR_REDIRECT_URI = 'https://localhost:3000';
+    var YOUR_REDIRECT_URI = 'http://localhost:3000';
     var fragmentString = location.hash.substring(1);
 
     // Parse query string to see if page request is coming from OAuth 2.0 server.
